--- a/_posts/2019-12-31-the-us-narrative-today.html
+++ b/_posts/2019-12-31-the-us-narrative-today.html
@@ -1,106 +1,152 @@
 ---
-images:
-- name: birdhouse-birdhouse-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-marcel-duchamp.jpg
-- name: oldtrain-oldtrain-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-space-pizza.jpg
-- name: yosemite-yosemite-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
-- name: gypsy-wagon-gypsywagon-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purple-storm.jpg
-- name: school-clouds-church-clouds-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-brush.jpg
-- name: hollywood-building-hollywood-building-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-atari-asteroids.jpg
-- name: fence-fence-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
-- name: copper-circuit-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-on-railroad-1.jpg
-- name: paris-paris-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-atari-asteroids.jpg
-- name: carry-load-carryload-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-constitution.jpg
-- name: legal-statue-legalstatue-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-emily-carr.jpg
-- name: bordercrossing-bordercrossing-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-satan-red.jpg
-- name: razorcliff-razorcliff-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-far-away.jpg
-- name: curtain-curtain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-asteroids.jpg
-- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
-- name: yosemite-yosemite-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-pablo-blue.jpg
-- name: copper-circuit-construction-zone-claw.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-construction-zone-claw.jpg
-- name: cannon-facing-cannon-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-copper-circuit-2.jpg
-- name: stalin-time-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-face-eyes-open-statue.jpg
-- name: blossombar-sunday-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-50-62.jpg
-- name: nazi-invasion-wild-gease-in-the-water.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wild-gease-in-the-water.jpg
-- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-- name: old-door-lock-old-door-lock-2-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-far-away.jpg
-- name: miamibeach-miamibeach-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-satan-red.jpg
-- name: cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-smooth-ride.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-- name: oldcabin-store-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-storm.jpg
-- name: fence-mexico-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purple-pond.jpg
-- name: bluelake-blue-brush-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
-- name: walled-garden-walled-garden-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-sunday.jpg
-- name: old-school-house-old-schoolhouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-matrix.jpg
-- name: wave-DSC_0004.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0004.jpg
-- name: oldtrain-oldtrain-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-plentiful.jpg
-- name: old-gas-pumps-oldgaspumps-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crafty-painting.jpg
-- name: adam-smith-adam-smith-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-horiz-circuit.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-sunday.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-- name: old-granary-field-granaryfield-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smooth-ride.jpg
-- name: oldbarn-oldbarn-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alberto-giacometti.jpg
-- name: abe-lincoln-one-yellow-collage-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-00-00.jpg
-- name: old-granary-field-granaryfield-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crafty-painting.jpg
-- name: san-francisco-street-view-san-francisco-street-view-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-free-woman.jpg
-- name: oldhouse-oldhouse-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-bright-sand.jpg
-- name: la-muse-hollywood-sign-with-tower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hollywood-sign-with-tower.jpg
-- name: old-door-lock-old-door-lock-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-purple-storm.jpg
-- name: legal-statue-legalstatue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-matrix.jpg
-- name: old-door-lock-old-door-lock-2-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-nazi-poster.jpg
-- name: subway-subway-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-far-away.jpg
-- name: la-muse-downtown-berlin-crowds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-berlin-crowds.jpg
-- name: bf-skinner-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-adam-smith-edinburgh.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-hot-spicy.jpg
+layout: post
+title: The US Narrative for December 31, 2019
+source: http://kinlane.com/2019/12/31/the-us-narrative-today/
+domain: the.us.narrative.today.kinlane.com
+stories:
+- title: KPS3 Hires Brittany Silva As Account Director
+  paper: 'Nevada Business Journal '
+  city: Las Vegas
+  state: Nevada
+  domain: http://www.nevadabusiness.com/
+  link: https://www.nevadabusiness.com/2019/12/kps3-hires-brittany-silva-as-account-director/
+- title: Man Found Dead After Neighbor Hears Gunshots
+  paper: 'Palatka Daily News '
+  city: Palatka
+  state: Florida
+  domain: http://www.palatkadailynews.com/
+  link: https://www.palatkadailynews.com/local-news/man-found-dead-after-neighbor-hears-gunshots
+- title: European Money Spawns More Misery For Migrants In Libya
+  paper: 'The Hickory Daily Record '
+  city: Hickory
+  state: North Carolina
+  domain: http://www.hickoryrecord.com/
+  link: https://www.hickoryrecord.com/news/national/european-money-spawns-more-misery-for-migrants-in-libya/article_42a417c1-e2c3-5002-8aa7-070cffbd57ed.html
+- title: Madison Central Students Volunteer With The Salvation Army
+  paper: 'Richmond Register '
+  city: Richmond
+  state: Kentucky
+  domain: http://www.richmondregister.com/
+  link: https://www.richmondregister.com/news/madison-central-students-volunteer-with-the-salvation-army/image_24388b34-2842-5dd1-8660-45add6c33780.html
+- title: Warriors' Chriss Fined For Shoving Mavericks' Doncic
+  paper: 'The Baytown Sun '
+  city: Baytown
+  state: Texas
+  domain: http://www.baytownsun.com/
+  link: http://baytownsun.com/sports/ap_sports/article_7332a54c-d3f8-5e36-a45f-9fa888c953e5.html
+- title: Migrant In Libya Relives Brutal Detention Through Sketches
+  paper: 'Clinton Herald '
+  city: Clinton
+  state: Iowa
+  domain: http://www.clintonherald.com/
+  link: https://www.clintonherald.com/region/migrant-in-libya-relives-brutal-detention-through-sketches/article_59aec984-5745-593b-9ca9-4a2955b2f8c2.html
+- title: Grafton City Council Prides Itself On Working With Community Members
+  paper: 'Mountain Statesman '
+  city: Clarksburg
+  state: West Virginia
+  domain: http://www.mountainstatesman.com/
+  link: https://mountainstatesman.com/article/grafton-city-council-prides-itself-on-working-with-community-members
+- title: Warming Elders Tootsies At Meadowview
+  paper: 'Minden Press-Herald '
+  city: Minden
+  state: Louisiana
+  domain: http://www.press-herald.com/
+  link: https://press-herald.com/warming-elders-tootsies-at-meadowview/
+- title: The Cruse Christmas Classic
+  paper: 'The Independent Tribune '
+  city: Concord
+  state: North Carolina
+  domain: http://www.independenttribune.com/
+  link: https://www.independenttribune.com/the-cruse-christmas-classic/image_73397dea-2b97-11ea-ab43-ef88b047ee37.html
+- title: Earthquakes, Aviation And An Apprehended Escapee Led October News
+  paper: 'Snyder Daily News '
+  city: Snyder
+  state: Texas
+  domain: http://www.snyderdailynews.com/
+  link: https://www.snyderdailynews.com/news/earthquakes-aviation-and-apprehended-escapee-led-october-news
+- title: Quiet Zone Resolution To Be Signed This Week
+  paper: 'York News Times '
+  city: York
+  state: Nebraska
+  domain: http://www.yorknewstimes.com/
+  link: https://www.yorknewstimes.com/news/local/quiet-zone-resolution-to-be-signed-this-week/article_c9748f7e-2b8d-11ea-b54f-1f5fc15ec5c8.html
+- title: Peach Bowl Tennessee Indiana
+  paper: 'Tifton Gazette '
+  city: Tifton
+  state: Georgia
+  domain: http://www.tiftongazette.com/
+  link: https://www.tiftongazette.com/peach-bowl-tennessee-indiana/image_f8aeaeff-6075-5c6a-a014-f6c514690654.html
+- title: Hate Crime Charges Made Against Man Accused In Hanukkah Stabbing
+  paper: 'Boston Herald '
+  city: Boston
+  state: Massachusetts
+  domain: http://www.bostonherald.com/
+  link: https://www.bostonherald.com/2019/12/30/hate-crime-charges-against-man-accused-in-hanukkah-stabbing/
+- title: Plastic Surgery Associates Goes Premium At Chamber
+  paper: 'Kerrville Daily Times '
+  city: Kerrville
+  state: Texas
+  domain: http://www.dailytimes.com/
+  link: https://www.valdostadailytimes.com/news/local_news/plastic-surgery-associates-goes-premium-at-chamber/image_1e60be57-6005-573b-9dd0-6b6f9a25b0ab.html
+- title: Coping With The Challenges Of Mental Illness During The Holidays
+  paper: 'The News Herald '
+  city: Southgate
+  state: Michigan
+  domain: http://www.thenewsherald.com/
+  link: http://www.thenewsherald.com/online_features/senior_living/coping-with-the-challenges-of-mental-illness-during-the-holidays/article_45348b9b-320e-53a4-b06f-4d607c3ea92d.html
+- title: China Has Pain Pill Addicts Too, But No One's Counting Them
+  paper: 'Aspen Daily News '
+  city: Aspen
+  state: Colorado
+  domain: http://www.aspendailynews.com/
+  link: https://www.aspendailynews.com/associated_press/china-has-pain-pill-addicts-too-but-no-one-s/article_a1d7a9c8-ba44-55b6-9729-05fdddd3ce8e.html
+- title: Peach Bowl Tennessee Indiana
+  paper: 'Press-Republican '
+  city: Plattsburgh
+  state: New York
+  domain: http://www.pressrepublican.com/
+  link: https://www.pressrepublican.com/peach-bowl-tennessee-indiana/image_169329b9-3a30-5877-94b8-018c0165d5ae.html
+- title: Camden Cove Employees Take Home Awards
+  paper: 'Chronicle Independent '
+  city: Camden
+  state: South Carolina
+  domain: http://www.chronicle-independent.com/
+  link: https://www.chronicle-independent.com/news/business/camden-cove-employees-take-home-awards/
+- title: Better Balance For Every Day
+  paper: 'The Eatonton Messenger '
+  city: Eatonton
+  state: Georgia
+  domain: http://www.msgr.com/
+  link: https://www.msgr.com/article/better-balance-every-day
+- title: Sunshine State Still Has An Eye On Military Space Force
+  paper: 'Lake City Reporter '
+  city: Lake City
+  state: Florida
+  domain: http://www.lakecityreporter.com/
+  link: https://www.lakecityreporter.com/regional/sunshine-state-still-has-eye-military-space-force
+- title: Boost Social Security Checks By Tapping IRAs Early, Suggests Study
+  paper: 'Business Times '
+  city: New Haven
+  state: Connecticut
+  domain: http://www.ctbusinesstimes.com/
+  link: https://www.ctbusinesstimes.com/2019/06/11/boost-social-security-checks-by-tapping-iras-early-suggests-study/
+- title: Ranfranz And Vine Funeral Homes
+  paper: 'Post-Bulletin '
+  city: Rochester
+  state: Minnesota
+  domain: http://www.postbulletin.com/
+  link: https://www.postbulletin.com/tributes/obituaries/ranfranz-and-vine-funeral-homes/image_3143ed2d-1ccf-5eac-b3ac-deeb0c89ebba.html
+- title: Patriots Are Far From Dead Despite Tough Loss
+  paper: 'The Daily News '
+  city: Newburyport
+  state: Massachusetts
+  domain: http://www.newburyportnews.com/
+  link: https://www.newburyportnews.com/sports/local_sports/patriots-are-far-from-dead-despite-tough-loss/image_edd64e12-94c0-5b11-a8d1-07eb1f38fed5.html
+- title: Bobby Lanier, Pillar Of Shelby County Government, Dies
+  paper: 'Memphis Flyer '
+  city: Memphis
+  state: Tennessee
+  domain: http://www.memphisflyer.com/
+  link: https://www.memphisflyer.com/JacksonBaker/archives/2019/12/29/bobby-lanier-pillar-of-shelby-county-government-dies
 ---
-
+KPS3 Hires Brittany Silva As Account Director.&nbsp;Man Found Dead After Neighbor Hears Gunshots.&nbsp;European Money Spawns More Misery For Migrants In Libya.&nbsp;Madison Central Students Volunteer With The Salvation Army.&nbsp;Warriors' Chriss Fined For Shoving Mavericks' Doncic.&nbsp;Migrant In Libya Relives Brutal Detention Through Sketches.&nbsp;Grafton City Council Prides Itself On Working With Community Members.&nbsp;Warming Elders Tootsies At Meadowview.&nbsp;
